# snax-mlir

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  example1.mlir  example2.mlir  example3.mlir  flake.nix  pyproject.toml  requirements.txt  rescale_down.mlir  setup.py  test.mlir  test.py
.devcontainer/: devcontainer.json
.github/workflows/: build-docker.yml  build-run-kernel-new-docker.yml  build-run-kernel-snake.yml  build-run-kernel.yml  build-run-mlperf-tiny.yml  ci-pyright.yml  code-formatting.yml  gh-pages.yml  lit-tests.yml  pact-tests.yml  phs-kernels-snake.yml  python-tests.yml  run-benchmarks.yml
asplos/exp_1/: Snakefile  conv.py  earlyconv_summary.txt  extract_cycles.py  lateconv_summary.txt  main_2d_i8.c  main_4d_i8.c  matmul.py  matmul_summary.txt  matvec_summary.txt  plot.py
asplos/exp_2/: Snakefile  conv.py  extract_cycles.py  main.c  plot.py  schedules_out  summary_base.txt
asplos/exp_3/: Snakefile  conv.py  main_2d_i8.c  main_4d_i8.c  plot.py  summary.txt
asplos/exp_4/: Snakefile  optimize_tile_sizes.py  plot.py  resnet_layers.yaml  tiled_resnet_layers.yaml
asplos/exp_5/: Snakefile  extract_cycles.py  generate_tiled_convs.py  main_4d_i8.c  optimize_tiles.py  summary.txt  tiled_resnet_layers.yaml
asplos/util/: convspecs.py
benchmark/: snax_benchmark.py  trace_to_perfetto.py
benchmarks/: .gitignore  run.py  snax_benchmark.py
benchmarks/dense_matmul/: Makefile  Snakefile  genbenchmark.py  gendata.py  main.c
benchmarks/roofline/: Makefile  Snakefile  genbenchmark.py  gendata.py  main.c  plot_roofline.py  tiled_quantized_matmul.py
benchmarks/tiled_matmul/: Makefile  Snakefile  genbenchmark.py  gendata.py  main.c
benchmarks/toy_model/: Makefile  genbenchmark.py  gendata.py  main.c  out  plot_toy.py  snax-gemmx-xdma.rules  toy.mlir  toy.snax-opt.mlir  toy_for.mlir
compiler/: snax-opt
compiler/accelerators/: accelerator.py  dispatching.py  gemmini.py  gemmini_os.py  matmul_unit.py  registry.py  rocc.py  snax.py  snax_alu.py  snax_gemm.py  snax_gemmx.py  snax_hwpe_mult.py  snax_simd.py  snax_xdma.py  util.py
compiler/dialects/: __init__.py  acc.py  accfg.md  accfg.py  bitcast_backport.py  dart.py  kernel.py  linalg_ext.py  linalg_extension.py  pipeline.py  snax.py  snax_stream.py  stream.py  tsl.py
compiler/inference/: dataflow.py  helpers.py  scoped_setups.py  trace_acc_state.py
compiler/interpreters/: linalg_ext.py  linalg_extension.py
compiler/parser/: tsl_parser.py
compiler/tools/: snax_opt_main.py
compiler/transforms/: __init__.py  acc_cse.py  acc_dedup.py  accfg_config_overlap.py  accfg_dedup.py  accfg_insert_resets.py  add_tiling_sequence.py  alloc_to_global.py  alloc_to_local.py  allocate_elementwise_mult.py  autoflow_layout_resolution.py  autoflow_scheduler.py  clear_memory_space.py  convert_acc_to_csr.py  convert_accfg_to_csr.py  convert_dart_to_snax_stream.py  convert_kernel_to_linalg.py  convert_linalg_to_acc.py  convert_linalg_to_accfg.py  convert_linalg_to_kernel.py  convert_linalg_to_stream.py  convert_memref_stream_to_snax.py  convert_stream_to_snax_stream.py  convert_to_kernel.py  convert_tosa_to_kernel.py  dispatch_elementwise_mult.py  dispatch_kernels.py  dispatch_regions.py  double_buffer.py  fuse_streaming_regions.py  gemmini_os_to_rocc.py  guarded_linalg_to_memref_stream.py  guarded_memref_streamify.py  insert_acc_op.py  insert_accfg_op.py  insert_debugs.py  insert_sync_barrier.py  linalg_to_gemmini_os.py  linalg_to_library_call.py  linalg_to_stream.py  (+22 more)
compiler/util/: TiledStridedLayout.py  canonicalize_affine.py  dispatching_rules.py  kernel_type.py  latexprint_affine.py  memref_descriptor.py  multiset.py  pack_bitlist.py  snax_memory.py  zigzag_dicts.py
container/: Dockerfile  DockerfileDev  DockerfileFull  Dockerfile_base
container/dev/: Dockerfile
demo/: snax-pipeline.mlir
docs/: index.md
docs/benchmarks/: index.md
kernels/alloc/: Makefile  Snakefile  func.mlir  func.snax-opt.mlir  main.c
kernels/conv/: Makefile  Snakefile  Snakefile_1D  Snakefile_2D  analyze.py  config.yaml  conv.mlir  conv.py  conv_nchw.py  genbenchmark.py  gendata.py  genkernel.py  main.c  run_exp_1.py
kernels/dynamic_matmul/: Makefile  dynamic_matmul.transform.mlir  genbenchmark.py  gendata.py  main.c  semi_dynamic_matmul.mlir
kernels/gemm/: Makefile  Snakefile  gemm.mlir  gemm.py  gemm_broadcast.py  gemm_init.mlir  gemm_init.py  gemm_init_broadcast.py  gemm_rescale.py  gemm_rescale_channels.py  gendata.py  main.c  main_i8.c
kernels/gemmini/: Makefile  Snakefile  gemmini.h.patch  sp_tiled_matmul_ws.mlir  tiled_matmul.transform.mlir
kernels/gemmini_os/: Makefile
kernels/half_tiled_matmul/: Makefile  gendata.py  half_tiled_matmul.mlir  main.c
kernels/hemaia/: Snakefile  device.c  device_main.c  hemaia_main.c  host.c
kernels/maxpool/: Makefile  main.c
kernels/mlp/: Snakefile  main.c  mlp.py
kernels/mlperf_tiny/: Snakefile  gendata.py  main.c  main_anomaly_int8_static.c
kernels/mlperf_tiny_ad01/: Makefile  ad01_int8.mlir.bc  ad01_int8.preproc.mlir  ad01_int8.snax-opt.mlir  elementwise_kernels.mlir  gendata.py  main.c  marimo_network.py  out.mlir  out2  out3.mlir  outin  preproc_intermediate.mlir  run_network.py
kernels/mlperf_tiny_ic/: Makefile  elementwise_kernels.mlir  gendata.py  main.c  out  out2  out3  outin  pretrainedResnet_quant.mlir  pretrainedResnet_quant.mlir.bc  pretrainedResnet_quant.preprocfinal.mlir  pretrainedResnet_quant.snax-opt.mlir
runtime/: Makefile.rules  snax-alu.rules  snax-gemm.rules  snax-gemmx.rules  snax-kul-cluster-mixed-narrow-wide.rules  snax-kul-narrow.rules  snax-mac.rules  snax-streamer-gemm-add-c.rules  snax-streamer-gemm-fifo-0.rules  snax-streamer-gemm-fifo-1-slow.rules  snax-streamer-gemm-fifo-1.rules  snax-streamer-gemm-fifo-2.rules  snax-streamer-gemm-fifo-3.rules  snax-streamer-gemm-fifo-4.rules  snax-streamer-gemm.rules  tflite_to_tosa.py  tollvm12.py  tomlir16.py  tomlir18.py
snaxc/: acc_context.py
tests/: test_main.py  test_matmul.py  test_mult.py
util/: gendata.py  get_model.py  snax_benchmark.py
(+548 files in other folders)
